# app-template

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
.spell/: words.txt
cmake/: CompilerWarnings.cmake  GTest.cmake  GitDeps.cmake  Sandbox.cmake  Test.cmake
src/: app.cpp  app.hpp  main.cpp
test/: app.test.cpp
